# sauvignon

./: .gitignore  Cargo.toml  create_db.sh  create_db.sql  docker-compose.yml
examples/: tracing_chrome.rs
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
sauvignon-axum/: Cargo.toml  graphiql.html
sauvignon-axum/src/: lib.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: any_hash_map.rs  dependencies.rs  error.rs  hash.rs  lib.rs  main.rs  operation.rs  smol_str.rs  smolstr.rs  string.rs  types.rs
src/database/: mod.rs
src/inscribe/: mod.rs
src/parser/: mod.rs
src/plan/: mod.rs
src/positions/: mod.rs
src/request/: mod.rs
src/resolve/: mod.rs
src/response/: mod.rs  produce.rs
src/response/produce/: async_step.rs  chunk.rs  mod.rs
src/schema/: mod.rs  sync.rs  validation.rs
src/types/: mod.rs
tests/: macros.rs  request.rs  validation.rs
tests/shared/: mod.rs
