[package]
name = "sauvignon"
version = "0.1.0"
edition = "2024"

[dependencies]
indexmap = { version = "2.12.0", features = ["serde"] }
thiserror = "2.0.17"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }
anyhow = "1.0.100"
squalid = { git = "https://github.com/helixbass/squalid", rev = "646f6bf" }
serde = "1.0.228"
serde_json = "1.0.145"
Inflector = "0.11.4"
derive_builder = "0.20.2"
itertools = "0.14.0"
illicit = "1.1.2"
indoc = "2.0.7"
rkyv = "0.8.12"
