[package]
name = "sauvignon"
version = "0.1.0"
edition = "2024"

[dependencies]
indexmap = { version = "2.12.0", features = ["serde"] }
thiserror = "2.0.17"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono" ] }
anyhow = "1.0.100"
squalid = { git = "https://github.com/helixbass/squalid", rev = "646f6bf" }
serde = "1.0.228"
serde_json = "1.0.145"
derive_builder = "0.20.2"
itertools = "0.14.0"
illicit = "1.1.2"
indoc = "2.0.7"
rkyv = "0.8.12"
tracing = "0.1.43"
sql_query_builder = "2.5.2"
heck = "0.5.0"
proc_macros = { package = "sauvignon_proc_macros", path = "proc_macros" }
shared = { package = "sauvignon_shared", path = "shared" }
strum = { version = "0.27.2", features = ["derive"] }
jiff = "0.2.16"
jiff-sqlx = { version = "0.1.1", features = [ "postgres" ] }
async-trait = "0.1.89"
chrono = "0.4.42"
uuid = "1.19.0"
smol_str = { version = "0.3.4", features = [ "serde" ] }

[dev-dependencies]
futures = "0.3.31"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.22"
